`#[no_std]` implementation and feature flag
Implement a `#[no_std]` version of the crates.

For `fontconfig-sys`, we change some imports and make once_cell "std"
feature a conditional import on "dlopen".

For `fontconfig`, we activate `std` by default to prevent breakage.

--- a/fontconfig/Cargo.toml
+++ b/fontconfig/Cargo.toml
@@ -23,4 +23,6 @@ version = "6.0.0"
 path = "../fontconfig-sys"
 
 [features]
+default = [ "std" ]
+std = []
 dlopen = [ "yeslogic-fontconfig-sys/dlopen" ]
