--- a/fontconfig-sys/Cargo.toml
+++ b/fontconfig-sys/Cargo.toml
@@ -24,7 +24,7 @@ links = "fontconfig"
 name = "fontconfig_sys"
 
 [dependencies]
-dlib = "0.5.0"
+dlib = { version = "0.5.0", default-features = false }
 # This can't be optional because build.rs can't conditionally enable an
 # optional dependency:
 #
@@ -32,10 +32,11 @@ dlib = "0.5.0"
 # > be used to enable an optional dependency, or enable other Cargo features.
 #
 # - https://doc.rust-lang.org/cargo/reference/build-scripts.html#rustc-cfg
-once_cell = "1.9.0"
+once_cell = { version = "1.9.0", default-features = false, features = [ "alloc" ] }
 
 [features]
-dlopen = []
+dlopen = [ "std" ]
+std = [ "once_cell/std" ]
 
 [build-dependencies]
 pkg-config = "0.3"
